alteração de texto e background

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
             <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"Incluencer, e transfomadora digital"</p>
+            <p class="font-weight-light mb-0">"Influencer, e transfomadora digital"</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -200,7 +200,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div>
               <div class="col-12 col-9">
-                <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me increver!</button>
+                <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
               </div>
             </div>
           </form>
