arrumar text CTA

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Prontas para começas? Vamos lá!</h2>
+          <h2 class="mb-4">Prontas para começar? Vamos lá!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
