--- a/index.html
+++ b/index.html
@@ -193,7 +193,10 @@
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
-              <div class="col-12 col-9 mb-2">
+              <div class="col-12 mb-2">
+                <iframe class="formulario" style="width: 600px; height: 500px;" src="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80"/>
+              </div>
+              <!-- <div class="col-12 col-9 mb-2">
                 <input type="text" class="form-control form-control-lg" placeholder="Coloque seu nome...">
               </div>
               <div class="col-12 col-9 mb-2">
@@ -201,7 +204,7 @@
               </div>
               <div class="col-12 col-9">
                 <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
-              </div>
+              </div> -->
             </div>
           </form>
         </div>
@@ -216,22 +219,18 @@
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-              <a href="#">About</a>
+              <a href="#">Sobre</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="#">Contato</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2020. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
