Alterando formularios para botao com direcionamento para o sendgrid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <img class="img-fluid rounded-circle" src="img/logo.png" style="width: 50px;" alt="logo">
       <a class="navbar-brand" href="#">EngajaMulher</a>
-      <a class="btn btn-warning" href="#">Cadastre-se</a>
+      <a class="btn btn-warning" href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80">Cadastre-se</a>
     </div>
   </nav>
 
@@ -46,14 +46,14 @@
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
-              <div class="col-12 col-6 mb-2">
+              <!-- <div class="col-12 col-6 mb-2">
                 <input type="text" class="form-control form-control-lg" placeholder="Coloque seu nome...">
               </div>
               <div class="col-12 col-6 mb-2">
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
-              </div>
-              <div class="col-12 col-6">
-                <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
+              </div> -->
+              <div class="col-12">
+                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
               </div>
             </div>
           </form>
@@ -112,7 +112,7 @@
               Nós da EngajaMulher, produzimos conteúdo e eventos VALIOSOS para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
           </p>
           <div class="lead mb-0">
-            <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
+            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
             <li>Conhecimento em temas importantes.</li>
           </div>
           <div class="lead mb-0">
-            <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
+            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
             Gostou da ideia? Se inscreve no Sympla pra não perder essa oportunidade única!
           </p>
           <div class="lead mb-0">
-            <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
+            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
           </div>
         </div>
       </div>
@@ -193,18 +193,16 @@
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
-              <div class="col-12 mb-2">
-                <iframe class="formulario" style="width: 600px; height: 500px;" src="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80"/>
-              </div>
+              
               <!-- <div class="col-12 col-9 mb-2">
                 <input type="text" class="form-control form-control-lg" placeholder="Coloque seu nome...">
               </div>
               <div class="col-12 col-9 mb-2">
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
-              </div>
-              <div class="col-12 col-9">
-                <button type="submit" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</button>
               </div> -->
+              <div class="col-12 col-9">
+                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+              </div>
             </div>
           </form>
         </div>
