Alterações de texto e inclusão de Título Coteúdos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Você, mulher, também está precisando de conselhos nessa pandemia?</h1>
+          <h1 class="mb-5">Olá empoderada! Somos a EngajaMulher e estamos preparando um evento especial para todas nós. Quer saber mais?</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
@@ -53,7 +53,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12">
-                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero saber mais!</a>
               </div>
             </div>
           </form>
@@ -66,6 +66,9 @@
   <section class="features-icons bg-light text-center">
     <div class="container">
       <div class="row">
+        <div class="col-12 mb-5">
+          <h2>Nossos conteúdos para o evento</h2>
+        </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
@@ -109,7 +112,7 @@
             Como você está se saindo na sua vida profissional, pessoal e mentalmente durante a quarentena?
           </p>
           <p class="lead mb-3">
-              Nós da EngajaMulher, produzimos conteúdo e eventos VALIOSOS para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
+              Nós da EngajaMulher, produzimos conteúdo e eventos <b>VALIOSOS</b> para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
           </p>
           <div class="lead mb-0">
             <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
@@ -152,7 +155,7 @@
     </div>
   </section>
 
-  <!-- Testimonials -->
+  <!-- convidados -->
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Nossos convidados mais que especiais</h2>
@@ -160,21 +163,21 @@
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
+            <h5>A definir</h5>
             <p class="font-weight-light mb-0">"Influencer, e transfomadora digital"</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
+            <h5>A definir</h5>
             <p class="font-weight-light mb-0">"Especialista em home office"</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
+            <h5>A definir</h5>
             <p class="font-weight-light mb-0">"Master coach growth hacker"</p>
           </div>
         </div>
@@ -188,7 +191,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Prontas para começar? Vamos lá!</h2>
+          <h2 class="mb-4">Pronta para começar? Vamos lá!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
@@ -201,7 +204,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12 col-9">
-                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Não perco por nada!</a>
               </div>
             </div>
           </form>
