--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Nossos convidados mais que especiais</h2>
-      <div class="row">
+      <div>
+        <h1>Conheça em breve!</h1>
+      </div>
+      <div class="row d-none">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
