--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
     </div>
   </section>
 
+
+
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
@@ -215,6 +217,44 @@
       </div>
     </div>
   </section>
+
+  <!-- Parceiros -->
+  <section class="features-icons bg-white text-center d-none">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 mb-5">
+          <h2>Nossas queridas parceiras</h2>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <a class="m-auto text-primary" href="https://www.ongnovamulher.org/"><img class="" src="img/ong.png"></a>
+            </div>
+            <h3 class="mt-3">ONG Nova Mulher</h3>
+            
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>Tarefas</h3>
+            <p class="lead mb-0">Organize-se com as tarefas</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>Soluções</h3>
+            <p class="lead mb-0">O que temos de dicas para deixar tudo mais prático.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>  
 
   <!-- Footer -->
   <footer class="footer bg-light">
