--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <img class="img-fluid rounded-circle" src="img/logo.png" style="width: 50px;" alt="logo">
-      <a class="navbar-brand" href="#">EngajaMulher</a>
+      <img id="logo" class="img-fluid rounded-circle" src="img/logo.png" alt="logo">
       <a class="btn btn-warning" href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80">Cadastre-se</a>
-      
     </div>
   </nav>
   
@@ -124,28 +122,25 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <img class="m-auto text-primary" style="width: 150px;" src="img/iguais.png">
             </div>
-            <h3>Home Office</h3>
-            <p class="lead mb-0">Como está sendo o dia a dia em casa.</p>
+            <p class="lead mb-0">Engajamento com mulheres parecidas com você.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <img class="m-auto text-primary" style="width: 110px;" src="img/Charity.png">
             </div>
-            <h3>Tarefas</h3>
-            <p class="lead mb-0">Organize-se com as tarefas</p>
+            <p class="lead mb-0">Colaboração para ONGs</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <img class="m-auto text-primary" style="width: 110px;" src="img/Graduate.png">
             </div>
-            <h3>Soluções</h3>
-            <p class="lead mb-0">O que temos de dicas para deixar tudo mais prático.</p>
+            <p class="lead mb-0">Conhecimento em temas importantes</p>
           </div>
         </div>
       </div>
@@ -164,7 +159,7 @@
             Como você está se saindo na sua vida profissional, pessoal e mentalmente durante a quarentena?
           </p>
           <p class="lead mb-3">
-              Nós da EngajaMulher, produzimos conteúdo e eventos <b>VALIOSOS</b> para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
+            Nós da EngajaMulher, produzimos conteúdo e eventos <b>VALIOSOS</b> para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
           </p>
           <div class="lead mb-0">
             <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
