alterando texto para nossas parceiras

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <!-- convidados -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">Nossos convidados mais que especiais</h2>
+      <h2 class="mb-5">Nossas convidadas mais que especiais</h2>
       <div>
         <h1>Conheça em breve!</h1>
       </div>
