Inclusão de Parceiras e alteração do facebook pixel

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window,document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '3270190359759554'); 
+    fbq('init', '176457424156311'); 
     fbq('track', 'PageView');
-  </script>
-  <noscript>
+    </script>
+    <noscript>
     <img height="1" width="1" 
-    src="https://www.facebook.com/tr?id=3270190359759554&ev=PageView
+    src="https://www.facebook.com/tr?id=176457424156311&ev=PageView
     &noscript=1"/>
-  </noscript>
+    </noscript>
   <!-- End Facebook Pixel Code -->
 
 </head>
@@ -265,32 +265,31 @@
     </div>
   </section>
 
-  <!-- Parceiros -->
+  <!-- Parceiras -->
   <section class="features-icons bg-white text-center">
     <div class="container">
       <div class="row">
         <div class="col-12 mb-5">
           <h2>Nossas queridas parceiras</h2>
         </div>
-        <div class="col-lg-12">
+        <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a class="m-auto text-primary" href="https://www.ongnovamulher.org/"><img class="" src="img/ong.png"></a>
+              <a class="m-auto text-primary" href="https://www.ongnovamulher.org/"><img class="parceiras" src="img/ong.png"></a>
             </div>
-            <h3 class="mt-3">ONG Nova Mulher</h3>
+            <h4 class="mt-0">ONG Nova Mulher</h4>
             
           </div>
         </div>
-        <!-- <div class="col-lg-4">
+        <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <a class="m-auto text-primary" href="https://www.instagram.com/brechofreedom/"><img class="parceiras" src="img/brechofreedom.png"></a>
             </div>
-            <h3>Tarefas</h3>
-            <p class="lead mb-0">Organize-se com as tarefas</p>
+            <h4>Brecho Freedom</h4>
           </div>
         </div>
-        <div class="col-lg-4">
+        <!-- <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-check m-auto text-primary"></i>
