--- a/index.html
+++ b/index.html
@@ -206,31 +206,35 @@
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Nossas convidadas mais que especiais</h2>
-      <div>
-        <h1>Conheça em breve!</h1>
-      </div>
-      <div class="row d-none">
-        <div class="col-lg-4">
+      <div class="row">
+        <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>A definir</h5>
-            <p class="font-weight-light mb-0">"Influencer, e transfomadora digital"</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/barbara.jpg" alt="convidada-barbara">
+            <h5>Bárbara Turatti</h5>
+            <p class="font-weight-light mb-0">
+              Cientista na área de Epidemiologia e Saúde Pública. 
+              Revisora de Artigos Científicos da CPQ Women and Child Health Journal (Canadá). 
+              Pós-Doutora e Doutora em Saúde Coletiva pela UFSC. 
+              Mestre em Saúde, Sociedade e Endemias pela Fiocruz. 
+              Especialista em Ecologia de Doenças Transmissíveis pela Fiocruz. 
+              Graduada em Enfermagem e Licenciatura pela UFF.
+            </p>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>A definir</h5>
-            <p class="font-weight-light mb-0">"Especialista em home office"</p>
+            <img class="img-fluid rounded-circle mb-2" src="img/Cissa.jpeg" alt="convidada-cissa">
+            <h5>Ciça Coelho</h5>
+            <p class="font-weight-light mb-0">Natural de Belem-PA, economista, internacionalista, mestrado em Direito Internacional, na área de análise de comportamento de atores internacionais, há 4 anos proprietária da Forma de Mãe, roupas para amamentar.</p>
           </div>
         </div>
-        <div class="col-lg-4">
+        <!-- <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
             <h5>A definir</h5>
             <p class="font-weight-light mb-0">"Master coach growth hacker"</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
