anteracao de links, imagens, parceiras e convidadas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     &noscript=1"/>
     </noscript>
   <!-- End Facebook Pixel Code -->
-
+  
 </head>
 
 <body>
@@ -65,7 +65,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <img id="logo" class="img-fluid rounded-circle" src="img/logo.png" alt="logo">
-      <a class="btn btn-warning" href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80">Cadastre-se</a>
+      <a class="btn btn-warning" href="live.html">Cadastre-se</a>
     </div>
   </nav>
   
@@ -103,7 +103,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12">
-                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero saber mais!</a>
+                <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero assistir agora!</a>
               </div>
             </div>
           </form>
@@ -162,7 +162,7 @@
             Nós da EngajaMulher, produzimos conteúdo e eventos <b>VALIOSOS</b> para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
           </p>
           <div class="lead mb-0">
-            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+            <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero assistir!</a>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
             <li>Conhecimento em temas importantes.</li>
           </div>
           <div class="lead mb-0">
-            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+            <a href="live.html" class="btn btn-block btn-lg btn-warning">Me leva pra LIVE!</a>
           </div>
         </div>
       </div>
@@ -192,10 +192,10 @@
             Nosso primeiro evento será <b>TOTALMENTE GRATUITO</b> e traremos influenciadores e palestrantes com variados backgrounds para conversar e dar dicas sobre diversos temas!
           </p>
           <p class="lead mb-3">
-            Gostou da ideia? Se inscreve no Sympla pra não perder essa oportunidade única!
+            Gostou da ideia? Clique no botão!
           </p>
           <div class="lead mb-0">
-            <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Quero me inscrever!</a>
+            <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero participar!</a>
           </div>
         </div>
       </div>
@@ -207,9 +207,9 @@
     <div class="container">
       <h2 class="mb-5">Nossas convidadas mais que especiais</h2>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/barbara.jpg" alt="convidada-barbara">
+            <img class="img-fluid rounded-circle mb-3" src="img/barbara.png" alt="convidada-barbara">
             <h5>Bárbara Turatti</h5>
             <p class="font-weight-light mb-0">
               Cientista na área de Epidemiologia e Saúde Pública. 
@@ -221,20 +221,23 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-2" src="img/Cissa.jpeg" alt="convidada-cissa">
+            <img class="img-fluid rounded-circle mb-2" src="img/Cissa.png" alt="convidada-cissa">
             <h5>Ciça Coelho</h5>
             <p class="font-weight-light mb-0">Natural de Belem-PA, economista, internacionalista, mestrado em Direito Internacional, na área de análise de comportamento de atores internacionais, há 4 anos proprietária da Forma de Mãe, roupas para amamentar.</p>
           </div>
         </div>
-        <!-- <div class="col-lg-4">
+        <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>A definir</h5>
-            <p class="font-weight-light mb-0">"Master coach growth hacker"</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/carolina.png" alt="convidada-barbara">
+            <h5>Carolina Fakhouri</h5>
+            <p class="font-weight-light mb-0">
+              Jornalista pela Anhembi Morumbi.
+            </p>
           </div>
-        </div> -->
+        </div>
+        
       </div>
     </div>
   </section>
@@ -276,7 +279,7 @@
         <div class="col-12 mb-5">
           <h2>Nossas queridas parceiras</h2>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <a class="m-auto text-primary" href="https://www.ongnovamulher.org/"><img class="parceiras" src="img/ong.png"></a>
@@ -285,23 +288,38 @@
             
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a class="m-auto text-primary" href="https://www.instagram.com/brechofreedom/"><img class="parceiras" src="img/brechofreedom.png"></a>
+              <a class="m-auto text-primary" href="https://www.instagram.com/brechofreedom/"><img class="parceiras" src="img/parc_brechofreedom.png"></a>
             </div>
             <h4>Brecho Freedom</h4>
           </div>
         </div>
-        <!-- <div class="col-lg-4">
+        <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <a class="m-auto text-primary" href="http://www.artinlife.com.br/"><img class="parceiras" src="img/parc_artinlife.png"></a>
             </div>
-            <h3>Soluções</h3>
-            <p class="lead mb-0">O que temos de dicas para deixar tudo mais prático.</p>
+            <h4>Art in Life</h4>
           </div>
-        </div> -->
+        </div>
+        <div class="col-lg-6">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <a class="m-auto text-primary" href="https://conexoesverdadeiras.com.br/"><img class="parceiras" src="img/parc_conexoes.png"></a>
+            </div>
+            <h4>Conexões Verdadeiras</h4>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <a class="m-auto text-primary" href="http://www.formademae.com.br/"><img class="parceiras" src="img/parc_formademae.png"></a>
+            </div>
+            <h4>Forma de Mãe</h4>
+          </div>
+        </div>
       </div>
     </div>
   </section>  
