alteração de de link para a live

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12 col-9">
-                <a href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80" class="btn btn-block btn-lg btn-warning">Não perco por nada!</a>
+                <a href="live.html" class="btn btn-block btn-lg btn-warning">Não perco por nada!</a>
               </div>
             </div>
           </form>
