--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <img id="logo" class="img-fluid rounded-circle" src="img/logo.png" alt="logo">
-      <a class="btn btn-warning" href="live.html">Cadastre-se</a>
+      <a class="btn btn-warning" href="live.html">LIVE</a>
     </div>
   </nav>
   
