altera texto principal

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Olá empoderada! Somos a EngajaMulher e estamos preparando um evento especial para todas nós. Quer saber mais?</h1>
+          <h1 class="mb-5">Olá empoderada! Somos a EngajaMulher e estamos preparando um evento especial para todas nós. Quer participar?.</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
