--- a/live.html
+++ b/live.html
@@ -98,7 +98,7 @@
 
       <div class="row">
         <div class="col-xl-9 mx-auto py-5"  id="live">
-          <h1 class="mb-0">Entraremos ao vivo <b>HOJE</b> às <b>19:30</b> aqui mesmo. Coloque seu alarme no celular para te lembrar. <br> <b>PARTICIPE</b>, esta causa é <b>TUA</b>.</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/A8iY30PK8VA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto mt-3">
           <form>
