--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Fortalecendo o empoderamento feminino">
+  <meta name="keywords" content="empoderamento feminino, engajar o feminismo">
+  <meta property="og:title" content="EngajaMulher - Empoderamento Feminino">
+  <meta property="og:image" content="https://growthon.github.io/acreditas/img/live_engajamulher_01.png">
+  <meta property="og:description" content="Fortalecendo o empoderamento feminino">
+  <meta property="og:url" content="https://engajamulher.netlify.app/">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
 
   <title>EngajaMulher - Evento</title>
 
