--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <img id="logo" class="img-fluid rounded-circle" src="img/logo.png" alt="logo">
-      <a class="btn btn-warning" href="live.html">LIVE</a>
+      <a class="btn btn-warning" href="https://youtu.be/LN3yicgvnpg">LIVE</a>
     </div>
   </nav>
   
@@ -109,7 +109,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12">
-                <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero assistir agora!</a>
+                <a href="https://youtu.be/LN3yicgvnpg" class="btn btn-block btn-lg btn-warning">Quero assistir agora!</a>
               </div>
             </div>
           </form>
@@ -168,7 +168,7 @@
             Nós da EngajaMulher, produzimos conteúdo e eventos <b>VALIOSOS</b> para as mulheres brasileiras! E o melhor? <b>100% GRATUITO!</b>
           </p>
           <div class="lead mb-0">
-            <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero assistir!</a>
+            <a href="https://youtu.be/LN3yicgvnpg" class="btn btn-block btn-lg btn-warning">Quero assistir!</a>
           </div>
         </div>
       </div>
@@ -186,7 +186,7 @@
             <li>Conhecimento em temas importantes.</li>
           </div>
           <div class="lead mb-0">
-            <a href="live.html" class="btn btn-block btn-lg btn-warning">Me leva pra LIVE!</a>
+            <a href="https://youtu.be/LN3yicgvnpg" class="btn btn-block btn-lg btn-warning">Me leva pra LIVE!</a>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
             Gostou da ideia? Clique no botão!
           </p>
           <div class="lead mb-0">
-            <a href="live.html" class="btn btn-block btn-lg btn-warning">Quero participar!</a>
+            <a href="https://youtu.be/LN3yicgvnpg" class="btn btn-block btn-lg btn-warning">Quero participar!</a>
           </div>
         </div>
       </div>
@@ -269,7 +269,7 @@
                 <input type="email" class="form-control form-control-lg" placeholder="Coloque seu e-mail...">
               </div> -->
               <div class="col-12 col-9">
-                <a href="live.html" class="btn btn-block btn-lg btn-warning">Não perco por nada!</a>
+                <a href="https://youtu.be/LN3yicgvnpg" class="btn btn-block btn-lg btn-warning">Não perco por nada!</a>
               </div>
             </div>
           </form>
