--- a/live.html
+++ b/live.html
@@ -69,7 +69,7 @@
         "https://sharity.com.br/arrecadacao-de-fundos-para-a-ong-nova-mulher?u=1269e6e32eb111eba2610a64e40af16e", "_blank"); 
       }
       function vaiPraLive(){
-        window.open("https://www.youtube.com/embed/A8iY30PK8VA")
+        window.open("https://youtu.be/LN3yicgvnpg")
       } 
   </script>
 
@@ -106,8 +106,8 @@
       <!-- Fim do countdown -->
 
       <div class="row">
-        <a class="col-xl-9 mx-auto py-5"  id="live" onclick="vaiPraLive()" href="https://www.youtube.com/embed/A8iY30PK8VA">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/A8iY30PK8VA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a class="col-xl-9 mx-auto py-5"  id="live" onclick="vaiPraLive()" href="https://youtu.be/LN3yicgvnpg">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/LN3yicgvnpg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto mt-3">
           <form>
