--- a/live.html
+++ b/live.html
@@ -78,7 +78,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a href="index.html"><img id="logo" class="img-fluid rounded-circle" src="img/logo.png" alt="logo"></a>
-      <a class="btn btn-warning" href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80">Doar</a>
+      <a class="btn " href="https://cdn.forms-content.sg-form.com/819a3017-2d24-11eb-a8a2-f68fa74ace80">Doar</a>
     </div>
   </nav>
 
@@ -134,7 +134,7 @@
               </div>
               
               <div class="col-12">
-                <button class="btn btn-block btn-lg btn-warning" onclick="doarAgora()">Quero contribuir para a causa!</button>
+                <button class="btn btn-block btn-lg " onclick="doarAgora()">Quero contribuir para a causa!</button>
               </div>
             </div>
           </form>
@@ -148,32 +148,21 @@
   <footer class="footer bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">Sobre</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contato</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+        <div class="col-lg-8 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
               <a href="https://www.facebook.com/samanta.soares.58511276/">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
+                <img src="img/footer_facebook.png">
               </a>
             </li>
-            <li class="list-inline-item">
+            <li class="list-inline-item mr-3">
               <a href="https://www.instagram.com/engaja_mulher_engaja/">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+                <img src="img/footer_instagram.png">
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="https://www.youtube.com/channel/UCm69UtiKm65KIWUu7s6vmWw">
+                <img src="img/footer_youtube.png">
               </a>
             </li>
           </ul>
