alinhamentos de texto e imagem

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg_3.jpg'); background-position: bottom;"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg_3.jpg'); background-position-y: -20em;"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2 style="color: black">E o melhor?</h2>
             <h2 class="mt-3 mb-5">100% GRATUITO!</h2>
@@ -185,8 +185,8 @@
             <p class="lead mb-3">
               Nossa missão é empoderar, apoiar e inspirar mulheres através de talks sobre assuntos atuais do universo feminino, e te ajudando a aguentar esse período sem se sentir sobrecarregado.
             </p> 
-            <div class="lead mb-3 ml-0">
-              <div>Por que participar?</div>
+            <div id="missao-itens" class="lead mb-3 ml-0">
+              <p>Por que participar?</p>
               <div>Engajamento com mulheres parecidas com você;</div>
               <div>Colaboração para ONGs;</div>
               <div>Conhecimento em temas importantes.</div>
@@ -202,7 +202,7 @@
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Quer participar</h2>
             <h2>&amp;</h2> 
-            <h2 class="mb-3">fazer a diferênça?</h2>
+            <h2 class="mb-3">fazer a diferença?</h2>
             <div class="lead mb-0">
               <a href="live.html" class="btn btn-block btn-lg ">Quero!</a>
             </div>
